--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   video_player: '>=2.1.1 <2.2.5'
   http: ^0.12.1
-  wakelock: ^0.2.1+1
+  wakelock: ^0.5.6
   visibility_detector: ^0.1.5
 
 dev_dependencies:
